--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<div class="col-5 box">
 				<h2 class="floral-text2"><em>About me</em></h2>
 				<div class="about-me">
-					<img src="image/me.jpg">
+					<img class="me" src="image/me.jpg">
 				</div>
 			</div>
 			<div class=" col-5 box">
